2006-03-01 [colin]	2.0.0cvs97

	* src/plugins/spamassassin/spamassassin.c
		Fix segfault (g_file_set_contents fails for some 
		reason and err==0x2f. Can't find out why with
		valgrind, using working function :-)

2006-03-01 [colin]	2.0.0cvs96

	* src/inc.c
		Offline overriding: let 'No' be cached only 3 seconds

2006-03-01 [colin]	2.0.0cvs95

	* src/addr_compl.c
	* src/addrbook.c
	* src/addressbook.c
	* src/addrindex.c
	* src/folder_item_prefs.c
	* src/headerview.c
	* src/imap.c
	* src/inc.c
	* src/ldif.c
	* src/mainwindow.c
	* src/mh.c
	* src/msgcache.c
	* src/prefs_common.h
	* src/prefs_msg_colors.c
	* src/procheader.c
	* src/procheader.h
	* src/procmime.c
	* src/procmsg.c
	* src/procmsg.h
	* src/send_message.h
	* src/simple-gettext.c
	* src/summaryview.c
	* src/summaryview.h
	* src/syldap.c
	* src/textview.c
	* src/undo.c
	* src/common/ssl_certificate.c
	* src/common/utils.c
	* src/gtk/colorsel.c
	* src/gtk/gtksctree.c
	* src/gtk/gtkshruler.c
	* src/plugins/trayicon/trayicon.c
		#if 0 goes to /dev/null

2006-03-01 [colin]	2.0.0cvs94

	* src/compose.c
	* src/imap.c
	* src/inc.c
	* src/inc.h
	* src/messageview.c
	* src/news.c
	* src/plugins/spamassassin/spamassassin.c
		Allow to add information in the "working offline"
		window

2006-03-01 [wwp]	2.0.0cvs93

	* src/plugins/spamassassin/spamassassin.c
		fixed spamc invocation: use a tricky temporary mini shell wrapper
		'cause it seems that calling `spamc ... < inputfile` with
		g_spawn_(a)sync simply.. erm doesn't work :-).

2006-03-01 [wwp]	2.0.0cvs92

	* src/toolbar.c
	* src/toolbar.h
		simplify the adding of spam/ham button to the messageview toolbar
		(it gets more clear now that the same button will be "Mark as spam"
		or "Mark as ham" according to the current message status,
		thanks to Colin).

2006-03-01 [wwp]	2.0.0cvs91

	* src/messageview.c
	* src/procmsg.c
	* src/procmsg.h
	* src/summaryview.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h