@@ -1281,3 +1281,4 @@
 ( cvs diff -u -r 1.27.2.16 -r 1.27.2.17 src/addr_compl.c;  cvs diff -u -r 1.22.2.7 -r 1.22.2.8 src/addrbook.c;  cvs diff -u -r 1.60.2.48 -r 1.60.2.49 src/addressbook.c;  cvs diff -u -r 1.28.2.14 -r 1.28.2.15 src/addrindex.c;  cvs diff -u -r 1.2.2.11 -r 1.2.2.12 src/folder_item_prefs.c;  cvs diff -u -r 1.8.2.15 -r 1.8.2.16 src/headerview.c;  cvs diff -u -r 1.179.2.95 -r 1.179.2.96 src/imap.c;  cvs diff -u -r 1.149.2.44 -r 1.149.2.45 src/inc.c;  cvs diff -u -r 1.12.2.8 -r 1.12.2.9 src/ldif.c;  cvs diff -u -r 1.274.2.101 -r 1.274.2.102 src/mainwindow.c;  cvs diff -u -r 1.79.2.23 -r 1.79.2.24 src/mh.c;  cvs diff -u -r 1.16.2.29 -r 1.16.2.30 src/msgcache.c;  cvs diff -u -r 1.103.2.42 -r 1.103.2.43 src/prefs_common.h;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/prefs_msg_colors.c;  cvs diff -u -r 1.47.2.26 -r 1.47.2.27 src/procheader.c;  cvs diff -u -r 1.11.2.5 -r 1.11.2.6 src/procheader.h;  cvs diff -u -r 1.49.2.73 -r 1.49.2.74 src/procmime.c;  cvs diff -u -r 1.150.2.55 -r 1.150.2.56 src/procmsg.c;  cvs diff -u -r 1.60.2.25 -r 1.60.2.26 src/procmsg.h;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/send_message.h;  cvs diff -u -r 1.1.16.2 -r 1.1.16.3 src/simple-gettext.c;  cvs diff -u -r 1.395.2.177 -r 1.395.2.178 src/summaryview.c;  cvs diff -u -r 1.68.2.17 -r 1.68.2.18 src/summaryview.h;  cvs diff -u -r 1.16.2.3 -r 1.16.2.4 src/syldap.c;  cvs diff -u -r 1.96.2.97 -r 1.96.2.98 src/textview.c;  cvs diff -u -r 1.13.2.6 -r 1.13.2.7 src/undo.c;  cvs diff -u -r 1.4.2.5 -r 1.4.2.6 src/common/ssl_certificate.c;  cvs diff -u -r 1.36.2.56 -r 1.36.2.57 src/common/utils.c;  cvs diff -u -r 1.1.4.7 -r 1.1.4.8 src/gtk/colorsel.c;  cvs diff -u -r 1.1.4.13 -r 1.1.4.14 src/gtk/gtksctree.c;  cvs diff -u -r 1.1.4.5 -r 1.1.4.6 src/gtk/gtkshruler.c;  cvs diff -u -r 1.14.2.33 -r 1.14.2.34 src/plugins/trayicon/trayicon.c;  ) > 2.0.0cvs95.patchset
 ( cvs diff -u -r 1.149.2.45 -r 1.149.2.46 src/inc.c;  ) > 2.0.0cvs96.patchset
 ( cvs diff -u -r 1.18.2.28 -r 1.18.2.29 src/plugins/spamassassin/spamassassin.c;  ) > 2.0.0cvs97.patchset
+( cvs diff -u -r 1.395.2.178 -r 1.395.2.179 src/summaryview.c;  ) > 2.0.0cvs98.patchset
